High priority rule